k8s/monitoring/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.homelab.bertbullough.com`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
